--- a/course_1/simplethread-affinity/Makefile
+++ b/course_1/simplethread-affinity/Makefile
@@ -3,7 +3,7 @@ LIB_DIRS =
 CC=gcc
 
 CDEFS=
-CFLAGS= -O0 -g $(INCLUDE_DIRS) $(CDEFS)
+CFLAGS= -O0 -g $(INCLUDE_DIRS) $(CDEFS) -Wall
 LIBS= 
 
 HFILES= 
