adding basic infraestructure for system logging

--- a/course_1/simplethread/Makefile
+++ b/course_1/simplethread/Makefile
@@ -6,8 +6,8 @@ CDEFS=
 CFLAGS= -O3 $(INCLUDE_DIRS) $(CDEFS) -Wall
 LIBS= 
 
-HFILES= 
-CFILES= pthread.c
+HFILES= logger.h
+CFILES= pthread.c logger.c
 
 SRCS= ${HFILES} ${CFILES}
 OBJS= ${CFILES:.c=.o}
@@ -22,8 +22,8 @@ distclean:
 	-rm -f *.o *.d
 	-rm -f pthread
 
-pthread: pthread.o
-	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $@.o -lpthread
+pthread: $(OBJS)
+	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $(OBJS) -lpthread
 
 depend:
 
